syntax = "proto3";


package app.improving.eventcontext.event;

import "common_api.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "kalix/annotations.proto";

enum ApiEventStatus {
    API_EVENT_STATUS_SCHEDULED = 0;
    API_EVENT_STATUS_INPROGRESS = 1;
    API_EVENT_STATUS_PAST = 2;
    API_EVENT_STATUS_CANCELLED = 3;
    API_EVENT_STATUS_DELAYED = 4;
    API_EVENT_STATUS_RELEASED = 5;
    API_EVENT_STATUS_UNKNOWN = 6;
}

message ApiReservationId {
    string reservation_id = 1 [(kalix.field).entity_key = true];
}

message ApiGetEventById {
    string event_id = 1 [(kalix.field).entity_key = true];
}

message ApiEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventInfo info = 2;
    string reservation = 5;
    ApiEventMetaInfo meta = 3;
    ApiEventStatus status = 4;
}

message ApiEventInfo {
    string event_name = 1;
    string description = 2;
    string event_url = 3;
    ApiOrganizationId sponsoring_org = 4;
    optional ApiGeoLocation geo_location = 5;
    google.protobuf.Timestamp expected_start = 7;
    google.protobuf.Timestamp expected_end = 8;
    bool is_private = 9;
}

message ApiEventUpdateInfo {
    optional string event_name = 1;
    optional string description = 2;
    optional string event_url = 3;
    optional ApiOrganizationId sponsoring_org = 4;
    optional ApiGeoLocation geo_location = 5;
    optional google.protobuf.Timestamp expected_start = 7;
    optional google.protobuf.Timestamp expected_end = 8;
    optional bool is_private = 9;
}

message ApiEventMetaInfo {
    ApiMemberId scheduled_by = 1;
    google.protobuf.Timestamp scheduled_on = 2;
    ApiMemberId last_modified_by = 3;
    google.protobuf.Timestamp last_modified_on = 4;
    google.protobuf.Timestamp actual_start = 5;
    google.protobuf.Timestamp actual_end = 6;
    ApiEventStatus status = 7;
}

message ApiChangeEventInfo {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventUpdateInfo info = 2;
    ApiMemberId changing_member = 3;
}

message ApiScheduleEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventInfo info = 2;
    ApiMemberId scheduling_member = 3;
}

message ApiCancelEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId cancelling_member = 2;
}

message ApiRescheduleEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    google.protobuf.Timestamp start = 2;
    google.protobuf.Timestamp end = 3;
    ApiMemberId rescheduling_member = 4;
}

message ApiDelayEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    string reason = 2;
    google.protobuf.Duration expected_duration = 3;
    ApiMemberId delaying_member = 4;
}

message ApiStartEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId starting_member = 2;
}

message ApiEndEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId ending_member = 2;
}

message ApiReleaseEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId releasing_member = 2;
}

message ApiAddLiveUpdate {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiLiveUpdate update = 2;
}

message ApiLiveUpdate {
    string from = 1;
    string to = 2;
}

message ApiAddReservationToEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    string reservation = 2;
    ApiMemberId reserving_member = 3;
}

// For direct event source in direct_event_events.proto


message ApiEventCancelled {
    ApiEventId event_id = 1;
    ApiMemberId cancelling_member = 2;
}

message ApiEventDelayed {
    string event_id = 1 [(kalix.field).entity_key = true];
    string reason = 2;
    ApiEventMetaInfo meta = 3;
    google.protobuf.Duration expected_duration = 4;
}

message ApiEventEnded {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventMetaInfo meta = 2;
}

message ApiEventInfoChanged {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventInfo info = 2;
    ApiEventMetaInfo meta = 3;
}

message ApiEventRescheduled {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventInfo info = 2;
    ApiEventMetaInfo meta = 3;
}

message ApiEventScheduled {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventInfo info = 2;
    ApiEventMetaInfo meta = 3;
}

message ApiEventStarted {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiEventInfo info = 2;
    ApiEventMetaInfo meta = 3;
}

message ApiReservationAddedToEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    string reservation = 2;
    ApiEventMetaInfo meta = 3;
}

message ApiEventReleased {
    string event_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId releasing_member = 2;
}